@@ -54,6 +54,8 @@ linux (4.16-1~exp1) UNRELEASED; urgency=medium
   * Use a dummy build profile for udebs that we test-build before signing
   * debian/lib/python/debian_linux/debian.py: Parse bottom lines of changelog
     entries
+  * debian/bin/gencontrol_signed.py: Copy maintainer and date into template's
+    changelog
 
  -- Roger Shimizu <rogershimizu@gmail.com>  Fri, 23 Mar 2018 21:10:34 +0900
 
